--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id('net.ltgt.errorprone') version '4.1.0'
 }
 
 group = 'com.aknopov.jsoncompare'
@@ -13,10 +14,13 @@ compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
 dependencies {
+    errorprone("com.google.errorprone:error_prone_core:$errorproneVersion")
+
     annotationProcessor "org.projectlombok:lombok:$lombokVersion"
     compileOnly "org.projectlombok:lombok:$lombokVersion"
 
     compileOnly "com.google.code.findbugs:jsr305:$jsr305Version"
+    compileOnly "com.google.errorprone:error_prone_annotations:$errorproneVersion"
 
     implementation "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
     implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
@@ -32,4 +36,8 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.errorprone.disableWarningsInGeneratedCode.set(true)
 }
