--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,11 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
 
+    implementation "com.google.guava:guava:$guavaVersion"
+
     implementation "org.slf4j:slf4j-api:2.0.16"
-    implementation "ch.qos.logback:logback-classic:1.5.15"
 
-
+    testImplementation "ch.qos.logback:logback-classic:1.5.15"
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
@@ -44,7 +45,6 @@ test {
 nullaway {
     annotatedPackages.add("com.aknopov")
 }
-
 
 tasks.withType(JavaCompile).configureEach {
     options.errorprone.disableWarningsInGeneratedCode.set(true)
